src/objects/XML_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>CRF_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF Type</label>
        <referenceTo>CRFMaster__c</referenceTo>
        <relationshipLabel>XML Configuarations</relationshipLabel>
        <relationshipName>XML_Configuarations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_Node__c</fullName>
        <description>Here store the string that will become xml node tag in generated xml</description>
        <inlineHelpText>Here store the string that will become xml node tag in generated xml</inlineHelpText>
        <label>XML Node</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>XML Configuaration</label>
    <nameField>
        <label>XML Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XML Configuarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>